@@ -1,12 +1,14 @@
 package ru.kovalev.boxesapp.service;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 import ru.kovalev.boxesapp.model.Truck;
 
 import java.util.List;
 import java.util.Objects;
 
 @Slf4j
+@Service
 public class BoxPlacementFinder {
 
     /**
@@ -20,10 +22,10 @@ public class BoxPlacementFinder {
      * Если подходящего места нет, возвращается пустой массив
      */
 
-    public int[] findPositionForBox(Integer[][] truckBody, int boxHeight, int boxLength) {
+    public int[] findPositionForBox(List<List<String>> truckBody, int boxHeight, int boxLength) {
         log.info("Поиск позиции для посылки: Высота = {}, Длина = {}", boxHeight, boxLength);
 
-        for (int i = truckBody.length - 1; i >= boxHeight - 1; i--) {
+        for (int i = truckBody.size() - 1; i >= boxHeight - 1; i--) {
             int[] position = findPositionInRow(truckBody, i, boxHeight, boxLength);
             if (position.length > 0) {
                 log.info("Найдена подходящая позиция на строке {}: Верт. = {}, Гориз. = {}", i, position[0], position[1]);
@@ -35,12 +37,12 @@ public class BoxPlacementFinder {
         return new int[0];
     }
 
-    private int[] findPositionInRow(Integer[][] truckBody, int row, int boxHeight, int boxLength) {
+    private int[] findPositionInRow(List<List<String>> truckBody, int row, int boxHeight, int boxLength) {
         log.debug("Поиск в строке {} для посылки с высотой {} и длиной {}", row, boxHeight, boxLength);
         int left = Integer.MIN_VALUE;
         int right = 0;
 
-        while (right < truckBody[row].length) {
+        while (right < truckBody.get(row).size()) {
             if (isBoxFit(truckBody, row, right, boxHeight, boxLength)) {
                 boolean isSupported = isPositionSupported(truckBody, boxLength, row, right);
                 if (isSupported) {
@@ -57,8 +59,8 @@ public class BoxPlacementFinder {
         return new int[0];
     }
 
-    private int updateLeftBound(Integer[][] truckBody, int row, int right, int left) {
-        if (Objects.isNull(truckBody[row][right])) {
+    private int updateLeftBound(List<List<String>> truckBody, int row, int right, int left) {
+        if (Objects.isNull(truckBody.get(row).get(right))) {
             if (left == Integer.MIN_VALUE) {
                 log.debug("Обновление левой границы: новая левая граница = {}", right);
                 return right;
@@ -70,23 +72,23 @@ public class BoxPlacementFinder {
         return left;
     }
 
-    private boolean isPositionSupported(Integer[][] truckBody, int boxLength, int row, int right) {
-        boolean hasSupport = (row == truckBody.length - 1) || hasEnoughSupport(truckBody[row + 1]
-                , boxLength, right - boxLength + 1, right);
+    private boolean isPositionSupported(List<List<String>> truckBody, int boxLength, int row, int right) {
+        boolean hasSupport = (row == truckBody.size() - 1) ||
+                hasEnoughSupport(truckBody.get(row + 1), boxLength, right - boxLength + 1, right);
         log.debug("Проверка поддержки позиции в строке {}: результат = {}", row, hasSupport);
         return hasSupport;
     }
 
-    private boolean isBoxFit(Integer[][] truckBody, int row, int right, int boxHeight, int boxLength) {
+    private boolean isBoxFit(List<List<String>> truckBody, int row, int right, int boxHeight, int boxLength) {
         int left = right - boxLength + 1;
 
-        if (left < 0 || isNotEmptySpace(truckBody[row], left, right)) {
+        if (left < 0 || isNotEmptySpace(truckBody.get(row), left, right)) {
             log.debug("Посылка не помещается в строке {}: левая граница = {}, правая граница = {}", row, left, right);
             return false;
         }
 
         for (int h = 0; h < boxHeight; h++) {
-            if (isNotEmptySpace(truckBody[row - h], left, right)) {
+            if (isNotEmptySpace(truckBody.get(row - h), left, right)) {
                 log.debug("Посылка не помещается по высоте: строка {}, высота = {}", row - h, boxHeight);
                 return false;
             }
@@ -96,9 +98,9 @@ public class BoxPlacementFinder {
         return true;
     }
 
-    private boolean isNotEmptySpace(Integer[] row, int left, int right) {
+    private boolean isNotEmptySpace(List<String> row, int left, int right) {
         for (int i = left; i <= right; i++) {
-            if (!Objects.isNull(row[i])) {
+            if (!Objects.isNull(row.get(i))) {
                 log.debug("Найдена занятая ячейка в диапазоне [{}, {}]: индекс = {}", left, right, i);
                 return true;
             }
@@ -106,11 +108,11 @@ public class BoxPlacementFinder {
         return false;
     }
 
-    private boolean hasEnoughSupport(Integer[] truckBody, int boxLength, int left, int right) {
+    private boolean hasEnoughSupport(List<String> truckBody, int boxLength, int left, int right) {
         int halfBoxLength = (boxLength % 2 == 0) ? boxLength / 2 : boxLength / 2 + 1;
         int supportLength = 0;
         while (left <= right) {
-            if (!Objects.isNull(truckBody[left])) {
+            if (!Objects.isNull(truckBody.get(left))) {
                 supportLength++;
             }
             left++;
@@ -129,7 +131,7 @@ public class BoxPlacementFinder {
      * @return наименее загруженный грузовик
      */
     public Truck findTruckWithMinLoadCapacity(List<Truck> trucks) {
-        Truck truckWithMinLoadCapacity = trucks.get(0);
+        Truck truckWithMinLoadCapacity = trucks.getFirst();
 
         for (Truck truck : trucks) {
             if (truck.getLoadCapacity() < truckWithMinLoadCapacity.getLoadCapacity()) {
